# motorsport-calendar-creator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
motorsport_calendar_creator/: __init__.py  __main__.py  calendar_common.py  motogp.py  worldsbk.py
tests/: test_calendar_common.py  test_calendar_creator.py
