[tool.poetry]
name = "motorsport_calendar_creator"
version = "0.1.0"
description = ""
authors = ["nixxo <nixxo@protonmail.com>"]
readme = "README.md"
packages = [{include = "motorsport_calendar_creator"}]

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.8.0-dev"
requests = "^2.28.2"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
